Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 4.12.3
-
Fix Version/s: Qt Creator 4.15.0-beta1
-
Component/s: Debugger
-
Labels:None
-
Platform/s:
-
Commits:108d06c83fc269577d3d9081419f169466c6f577 (qt-creator/qt-creator/master)
Description
When attaching the debugger to a running process (Debug > Start Debugging > Attach to Running Application), the string containing the path to the process executable is incorrect whenever there is whitespace in the path.
For example, if the executable was found at
/Applications/My\ App.app/Contents/MacOS/My\ App
then the variable dExecutable would be evaluatedĀ
dExecutable = "/Applications/My"
and the debugging session would fail.